--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL="postgresql://postgres:Vaycmmtk786@localhost:5432/vehicle_booking?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/vehicle_booking?schema=public"
 
 # JWT
 JWT_SECRET="your-super-secret-jwt-key-change-in-production"
